fix display of about text overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -619,6 +619,7 @@ footer button {
   }
 
   #reviews {
+    display: inline-block;
     left: 10%;
     width: 80%;
   }
